# cyberfinance_bot

./: main.py  pyproject.toml
core/: __init__.py  create_sessions.py  import_sessions.py  main.py  start_farming.py
database/: __init__.py  actions.py  on_startup.py
other/: export.py  research_update.py  socks_to_http.py
utils/: config.py  generator.py  time.py
